# dwellr

./: .dockerignore  .env.example  .env.local  .env.test  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CLAUDE.md  Dockerfile  README.md  WORKERS.md  alembic.ini  celerybeat-schedule  crawlers.yaml  dev.sh  docker-compose-local.yml  dwell.py  dwell_cli.py  fly.toml  ingestors.yaml  local-dev.sh  pyproject.toml  pytest.ini  start.sh  supervisord.conf  sync_cli.py  test.py  test_hook.py  test_scraper_simple.py  user_agent.py
cli/: __init__.py  main.py
cli/commands/: db.py  task.py  user_agent.py
cli/core/: formatters.py  task_manager.py
migrations/: env.py
migrations/versions/: 20250814_153837_b19f72a13604_initial_migration.py  20250815_121623_3dd51f46be18_add_profile_completion_tracking.py  20250824_152420_bb6b2306c35a_split_name_into_first_name_last_name_.py
scripts/: create_test_user.py
src/: config.py
src/agent/: __init__.py  listing_agent.py
src/agents/: deps.py  listing_agent.py  message_formatter.py  stream_events.py  user_agent.py
src/agents/tools/: __init__.py  evaluation.py  preferences.py  profile.py  recommendations.py
src/api/: deps.py  exceptions.py  main.py
src/api/routes/: __init__.py  chat.py  user.py
src/api/schemas/: chat.py
src/api/utils/: sse.py
src/clients/: __init__.py  email_client.py
src/core/: config.py  database.py  supabase.py
src/crawlers/: __init__.py  base_crawler.py  crawler_manager.py  listing_project.py  listing_project_params.py
src/database/: __init__.py  db.py  db_manager.py  schema.sql
src/email/: email_client.py
src/ingestors/: __init__.py  base_ingestor.py  ingestor.py  listing_project.py
src/jobs/: __init__.py  job_types.py  scheduler.py
src/models/: __init__.py  communication.py  email.py  listing.py  listing_evaluation.py  search_params.py  task.py  user.py  user_session.py
src/scrapers/: base_scraper.py  listing_project.py  listing_project_scraper.py
src/services/: listing_agent.py  listing_evaluator.py  listing_service.py  user_agent.py  user_service.py
src/utils/: price_converter.py
src/workers/: __init__.py  celery_app.py  tasks.py
supabase/: config.toml
tests/: __init__.py  conftest.py  test_workers_basic.py
tests/fixtures/: test_data.py
tests/integration/: test_evaluation_workflow.py  test_price_normalization.py
tests/unit/jobs/: test_job_scheduler.py
tests/unit/models/: test_listing.py  test_task.py  test_user.py
tests/unit/services/: test_user_agent.py  test_user_service.py
tests/unit/workers/: test_evaluation.py
web/: .env.example  Dockerfile  fly.toml  package-lock.json  package.json  tailwind.config.ts
web/app/components/chat/: Message.tsx  MessageInput.tsx  (+3 more)
web/app/hooks/: useChat.ts
web/app/routes/: _index.tsx  api.chat.history.ts  api.chat.stream.ts  chat.tsx  dashboard.tsx  login.tsx  logout.tsx  signup.tsx
web/app/services/: api.client.ts  api.server.ts  auth.server.ts  profile.server.ts
