[project]
name = "dwellr"
version = "0.1.0"
description = "AI-powered rental listing agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html2text>=2025.4.15",
    "lxml>=5.4.0",
    "openai>=1.58.1",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.black]
line-length = 88

[tool.pyright]
typeCheckingMode = "strict"
include = ["src"]
exclude = ["**/__pycache__", "**/migrations"]
