[project]
name = "dwellr"
version = "0.1.0"
description = "AI-powered rental listing agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html2text>=2025.4.15",
    "lxml>=5.4.0",
    "openai==1.99.1",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "celery[redis]>=5.5.3",
    "redis>=5.2.1",
    "flower>=2.0.1",
    "celery-types>=0.23.0",
    "pyyaml>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-ai[logfire]>=0.6.2",
    "logfire[asyncpg]>=4.0.0",
    "rich>=14.1.0",
    "supabase>=2.18.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "alembic>=1.16.4",
    "testcontainers>=4.12.0",
    "returns>=0.26.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pre-commit>=4.0.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-celery>=1.0.0",
    "ruff>=0.12.0",
    "testcontainers[postgres,postgresql]>=4.12.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.black]
line-length = 88

[tool.pyright]
typeCheckingMode = "strict"
include = ["src"]
exclude = ["**/__pycache__", "**/migrations", "src/core/config.py"]
venvPath = "."
venv = ".venv"
